# advent_of_code_2024

./: .gitignore  README.md  environment.yml  pyproject.toml
src/: data.py  day01_historian_hysteria.py  day02_rednosed_reports.py  day03_mul_it_over.py  day04_ceres_search.py  day05_print_queue.py
src/helpers/: __init__.py  text_file_to_2darray.py  text_file_to_lines.py  text_file_to_parts_of_lists.py  text_file_to_string.py
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
