[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Solution for Advent of Code 2024"
authors = ["Dennis Bakhuis <git@bakhuis.nu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
numpy = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests/**/test_*.py"]
addopts = ["--import-mode=importlib"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
exclude = ['tests/']
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
extend-select = ["D", "W", "B", "Q"]
unfixable = ["D", "B"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B404", "B410"]